# Asset_Inventory

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ansible/playbooks/: correlate_assets.yml  discover_assets.yml  dns_enrichment.yml  generate_reports.yml  smb_collection.yml  snmp_collection.yml  ssl_collection.yml  system_info.yaml  test.yaml
api/app/: main.py  schemas.py
api/app/routes/: assets.py
awx/credentials/: README.md
awx/inventories/: local.yml
awx/projects/: asset-discovery-platform.yml
awx/templates/: discover-network.yml  workflow.yml
dashboard/: README.md
database/: schema.sql
discovery/: __init__.py  cli.py  models.py  runner.py
discovery/plugins/: __init__.py  base.py  dns.py  nmap.py  smb.py  snmp.py  ssl.py
docker/: api.Dockerfile
docs/: architecture.md
k8s/awx/: kustomization.yaml
tests/: test_api.py  test_discovery_runner.py
