[project]
name = "asset-discovery-platform"
version = "0.1.0"
description = "AWX-orchestrated cyber asset discovery and inventory platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "dnspython>=2.6.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "black>=24.4.0",
  "flake8>=7.1.0",
  "isort>=5.13.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "safety>=3.2.0",
]

[tool.setuptools.packages.find]
include = ["api*", "discovery*"]
exclude = ["ansible*", "awx*", "dashboard*", "database*", "docker*", "docs*", "tests*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
